fix(Avatar): don't adjust the colors in high contrast

--- a/src/components/Avatar/Avatar.style.scss
+++ b/src/components/Avatar/Avatar.style.scss
@@ -23,6 +23,9 @@
   position: relative;
   width: fit-content;
 
+  // The color of these elements are descriptive therefore don't override them in high contrast
+  forced-color-adjust: none;
+
   .md-avatar-wrapper-children {
     position: absolute;
   }
